--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <html lang="en" >
 <head>
+  <title>PoC Indicadores</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Angular Material style sheet -->
   <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
