--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 
     <!-- Socket.io-->
     <!--<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>-->
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="http://nb379:777/socket.io/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 
 </body>
