--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 <body ng-app="indicadoresApp" ng-cloak>
 
   <div ng-view> </div>
+
+  
+
     <!-- Angular Material requires Angular.js Libraries -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
@@ -17,8 +20,15 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.min.js"></script>
 
+    <!-- ChartJS Library-->
+    <script src="js/libs/Chart.js"></script>
+    <script src="js/libs/angular-chart.js"></script>
+
     <!-- Angular Material Library -->
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+
+  
+
 
     <!-- Your application bootstrap  -->
     <script src="js/app.module.js"></script>
@@ -29,11 +39,6 @@
     <script src="js/indicadores.controller.js"></script>
     <script src="js/app.route.js"></script>
 
-    <!-- ChartJS Library-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 
     <!-- Socket.io-->
     <!--<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>-->
