--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 
     <!-- ChartJS Library-->
     <script src="js/libs/Chart.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.js"></script> -->
     <script src="js/libs/angular-chart.js"></script>
 
     <!-- Angular Material Library -->
@@ -43,7 +44,6 @@
     <!-- Socket.io-->
     <!--<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>-->
     <script src="http://nb379:777/socket.io/socket.io.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 
 </body>
 
